# ppt-rs

./: .gitignore  ACHIEVEMENT_SUMMARY.md  AGENTS.md  ALIGNMENT_CHECKLIST.md  ALIGNMENT_FIX_SUMMARY.md  ALIGNMENT_INDEX.md  ALIGNMENT_REPORT.md  ALIGNMENT_SUMMARY.md  ALIGNMENT_TESTING_GUIDE.md  ANALYSIS_COMPLETE.md  API_DESIGN.md  API_GUIDE.md  API_SIMPLIFICATION.md  API_SIMPLIFICATION_COMPLETE.md  ARCHITECTURE.md  CLI_GUIDE.md  CLI_SUMMARY.md  CODEBASE.md  CODEBASE_SUMMARY.md  COMPARISON_WITH_PYTHON_PPTX.md  COMPREHENSIVE_DEMO_IMAGE_FIX.md  Cargo.toml  ENHANCED_ALIGNMENT_REPORT.md  EXAMPLES.md  EXAMPLES_FINAL_SUMMARY.txt  EXAMPLES_INDEX.md  EXAMPLES_SUMMARY.md  FINAL_ALIGNMENT_STATUS.md  FINAL_SESSION_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FLUENT_API.md  FLUENT_API_ROADMAP.md  FONT_FITTING_ENHANCEMENT.md  GENERATION_EXAMPLES.md  HTML_PARSERS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  LEARNING_ANALYSIS.md  (+59 more)
docs/: ALIGNMENT_COMPLETE.md  CODEBASE.md  COMPILATION_FIX_SUMMARY.md  COMPLETE_SESSION_FINAL.md  ENHANCED_EXAMPLE_SUMMARY.md  ENHANCEMENTS_COMPLETE.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LEARNINGS_FROM_POWERPOINT_REPAIR.md  LEARNING_SUMMARY.md  MIGRATION_ASSESSMENT.md  MIGRATION_COMPLETE.md  MISSING_FEATURES_ANALYSIS.md  OOXML_ADOPTION_COMPLETE.md  OOXML_ANALYSIS.md  OOXML_INTEGRATION_PLAN.md  PHASE2_INTEGRATION_COMPLETE.md  PHASE3_XML_BUILDER_COMPLETE.md  PHASE_7_COMPLETE.md  PLACEHOLDER_FIX_COMPLETE.md  POWERPOINT_COMPATIBILITY_FIX.md  POWERPOINT_FIX_COMPLETE.md  PROGRESS.md  RELATIONSHIP_ORDER_FIX.md  SESSION_COMPLETE_SUMMARY.md  SLIDE_CONTENT_FIX.md  VALIDATION_REPORT.md  XML_FORMATTING_COMPLETE.md  XML_GENERATION.md  index.html
examples/: 01_create_simple_presentation.rs  02_create_with_slides.rs  02_fluent_api.rs  03_fluent_slide_api.rs  03_properties_and_metadata.rs  03_validate_file_integrity.rs  04_comprehensive_test.rs  04_parity_features.rs  05_comprehensive_parity.rs  05_test_slide_generation.rs  06_slide_numbering.rs  07_advanced_formatting.rs  08_table_styles.rs  09_advanced_animations.rs  10_rtl_text_support.rs  README.md  actual_charts_demo.rs  alignment_test.rs  batch_generator.rs  color_and_table_demo.rs  comprehensive_demo.rs  data_driven.rs  dimension_demo.rs  enhanced_alignment.rs  enhanced_html_features.rs  enhanced_markdown_features.rs  html2ppt_comprehensive.rs  html2ppt_demo.rs  html_features.html  integrated_example.rs  layout_demo.rs  layout_template_features.rs  markdown_features.md  md2ppt_demo.pptx  multi_slide_presentation.rs  new_elements_demo.rs  new_features_demo.rs  proper_pptx.rs  read_pptx.rs  read_presentation.rs  (+13 more)
examples/output/: api_docs.pptx  bullet_styles.pptx  business_presentation.pptx  dimension_demo.pptx  feature_showcase.pptx  image_features.pptx  layout_demo.pptx  layouts.pptx  multi_slide_proper.pptx  my.pptx  new_elements_demo.pptx  project_proposal.pptx  proposal.pptx  report_proper.pptx  rust_intro.pptx  rust_quick.pptx  simple.pptx  simple_proper.pptx  status_report.pptx  table_demo.pptx  tech_doc.pptx  test_notes.pptx  text_formatting.pptx  themes.pptx  themes_demo.pptx  training.pptx  training_course.pptx  training_proper.pptx
samples/: sample_to_read.pptx
scripts/: validate_parity.py
src/: api.rs  builder.rs  chart.rs  config.rs  constants.rs  error.rs  exc.rs  generator.rs  integration.rs  lib.rs  media.rs  package.rs  prelude.rs  presentation.rs  shared.rs  slide.rs  table.rs  templates.rs  types.rs  util.rs
src/chart/: axis.rs  data.rs  data_table.rs  enhancements.rs  mod.rs
src/cli/: commands.rs  mod.rs  parser.rs  syntax.rs
src/core/: dimension.rs  mod.rs  placement.rs  powerpoint_compat.rs  traits.rs  validation.rs  xml_utils.rs
src/dml/: color.rs  fill.rs  gradient.rs  line.rs  mod.rs  pattern.rs  picture_fill.rs  theme.rs
src/elements/: color.rs  mod.rs  position.rs
src/enums/: action.rs  base.rs  chart.rs  dml.rs  lang.rs  mod.rs  shapes.rs  text.rs
src/exc/: messages.rs
src/export/: html.rs  html_navigation.css  html_navigation.js  html_notes.css  html_style.css  image_export.rs  md.rs  mod.rs  pdf_export.rs  slide_render.rs
src/generator/: builder.rs  connectors.rs  constants.rs  gradients.rs  hyperlinks.rs  image_effects.rs  images.rs  images_xml.rs  layout_parts.rs  media.rs  media_registry.rs  memory_profile.rs  mod.rs  notes_xml.rs  package_cache.rs  package_xml.rs  presentation_theme.rs  props_xml.rs  reference_chart_embedding.xlsx  shapes.rs  shapes_xml.rs  slide_content.rs  slide_master_txstyles.xml  slide_xml.rs  tables.rs  tables_xml.rs  template.rs  text.rs  theme_xml.rs  xml.rs
test_rust_extracted/: [Content_Types].xml
tests/: advanced_features_test.rs  api_export_test.rs  chart_generation_test.rs  chart_test.rs  compatibility_test.rs  compression_test.rs  export_html_test.rs  export_markdown_test.rs  image_enhancement_test.rs  image_url_test.rs  import_html_test.rs  import_merge_test.rs  integration_tests.rs  layouts_packaging_test.rs  mcp_integration_test.rs  memory_profile_test.rs  new_capabilities_test.rs  new_features_test.rs  openxml_integration_tests.rs  output_quality_test.rs  package_validation_test.rs  pdf_export_test.rs  powerpoint_compat_test.rs  pptx_advanced_elements_test.rs  pptx_elements_test.rs  repair_compare_test.rs  round_trip_html_test.rs  round_trip_markdown_test.rs  table_xml_test.rs  theme_customization_test.rs  unit_tests.rs  validation_test.rs  visual_polish_test.rs
(+242 files in other folders)
