[package]
name = "ppt-rs"
version = "0.2.19"
edition = "2024"
authors = ["Ying Kit WONG"]
description = "Create, read, and update PowerPoint 2007+ (.pptx) files with rich formatting, bullet styles, themes, and templates."
license = "Apache-2.0"
repository = "https://github.com/yingkitw/ppt-rs"
keywords = ["powerpoint", "ppt", "pptx", "openxml", "office"]
categories = ["text-processing", "parser-implementations"]
readme = "README.md"

[dependencies]
zip = "0.6"
xml-rs = "0.8"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
pulldown-cmark = { version = "0.10", optional = true }

# Syntax highlighting (optional)
syntect = { version = "5.2", default-features = false, features = ["parsing", "regex-fancy", "dump-load", "default-syntaxes", "default-themes"], optional = true }

# Network dependencies (optional)
reqwest = { version = "0.11", features = ["blocking"], optional = true }
scraper = { version = "0.18", optional = true }
url = { version = "2.5", optional = true }

# MCP dependencies (optional)
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rmcp = { version = "1.6", features = ["transport-io"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = []
cli = ["clap", "pulldown-cmark", "syntect"]
mcp = ["serde", "serde_json", "dep:rmcp", "dep:tokio"]
web2ppt = ["reqwest", "scraper", "url"]

[dev-dependencies]
serde_json = "1"
serial_test = "3"

[lib]
name = "ppt_rs"
path = "src/lib.rs"

[[bin]]
name = "pptcli"
path = "src/bin/pptcli.rs"
required-features = ["cli"]

[[bin]]
name = "ppt_mcp"
path = "src/bin/ppt_mcp.rs"
required-features = ["mcp"]

[[test]]
name = "mcp_integration_test"
path = "tests/mcp_integration_test.rs"
required-features = ["mcp"]

[[example]]
name = "enhanced_markdown_features"
path = "examples/enhanced_markdown_features.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
strip = true
